<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/quit"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_baseline_quit_24"
            android:rotation="45"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardBackgroundColor="#F45555"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/quit"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="@dimen/cardview_radius"
            >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:riv_corner_radius="32dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_baseline_people_24"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/profile_pic"
                        android:text="Nora Kim"
                        android:textSize="24sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Robin"
                        android:textSize="30sp"
                        android:textStyle="italic|bold"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/notes_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="Notes"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/grey"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/notes_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cardview_min_height"
            app:layout_constraintTop_toBottomOf="@id/notes_textview"
            style="@style/cardview_1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/notes"
                android:gravity="center_vertical|start"
                android:theme="@style/text_bold"
                />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/offices_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/notes_card_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/offices"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/grey"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/location_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cardview_min_height"
            app:layout_constraintTop_toBottomOf="@id/offices_textview"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/cardview_1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/location"
                android:gravity="start"
                style="@style/text_bold"
                />
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="Boston"
                style="@style/text_normal"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/work_area_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            app:layout_constraintTop_toBottomOf="@id/location_card_view"
            style="@style/cardview_1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/work_area"
                android:gravity="start"
                style="@style/text_bold"
                />
            <TextView
                android:id="@+id/work_area"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="Sales and Marketing"
                style="@style/text_normal"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/desk_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cardview_min_height"
            app:layout_constraintTop_toBottomOf="@id/work_area_card_view"
            style="@style/cardview_1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/desk"
                android:gravity="start"
                style="@style/text_bold"
                />

            <TextView
                android:id="@+id/desk"
                style="@style/text_bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="36dp"
                android:paddingBottom="0dp"
                android:text="@string/view_on_map" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_baseline_arrow_forward_24"
                />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/schedule_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cardview_min_height"
            style="@style/cardview_1"
            app:layout_constraintTop_toBottomOf="@id/desk_card_view"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/schedule"
                android:gravity="start"
                style="@style/text_bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="end|center_vertical"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:endIconTint="@color/dark_grey"
                android:layout_marginEnd="16dp"
                >
                <AutoCompleteTextView
                    android:id="@+id/dropdown_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/text_normal"
                    android:layout_gravity="end"


                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/permission_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/schedule_card_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/permissions"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/grey"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/cardview_min_height"
            app:layout_constraintTop_toBottomOf="@id/permission_textview"
            style="@style/cardview_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/desk"
                android:gravity="start"
                style="@style/text_bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                style="@style/text_normal"
                android:text="@string/during_office_hours"
                />


        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <TextView-->
<!--        android:id="@+id/permissions_textview"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@id/notes_card_view"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="Permissions"-->
<!--        android:textSize="16sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@color/grey"-->
<!--        />-->


</ScrollView>